done changes required from aws eb

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ Scripts/
 xgboost/
 pip-selfcheck.json
 pyvenv.cfg
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
